+ added in-memory spring security basic authentication
+ added endpoint to handle individual user based chat

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 }
 
 plugins {
+    id 'io.franzbecker.gradle-lombok' version '1.8'
 	id 'java'
 }
 
@@ -24,5 +25,10 @@ repositories {
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-websocket'
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	runtimeClasspath "org.springframework.boot:spring-boot-devtools"
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	
+	//compileOnly 'org.projectlombok:lombok:1.18.4'
+   // annotationProcessor 'org.projectlombok:lombok:1.18.4'
 }
