--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,34 @@
-buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.14.RELEASE'
-	}
-}
-
 plugins {
-    id 'io.franzbecker.gradle-lombok' version '1.8'
+	id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'io.franzbecker.gradle-lombok' version '3.1.0'
 	id 'java'
 }
 
-apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-group = 'com.gdg'
+group = 'com.gdgbbsr'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+configurations {
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
+
 repositories {
-	mavenCentral()
+	jcenter()
 }
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.springframework.boot:spring-boot-starter-websocket'
-	compile 'org.springframework.boot:spring-boot-starter-security'
-	runtimeClasspath "org.springframework.boot:spring-boot-devtools"
-	testCompile 'org.springframework.boot:spring-boot-starter-test'
-	
-	//compileOnly 'org.projectlombok:lombok:1.18.4'
-   // annotationProcessor 'org.projectlombok:lombok:1.18.4'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'org.postgresql:postgresql'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
